{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 23,
  "lineage": "d64bdc8f-fd0c-e16e-6b69-68ef8360e636",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00794a171e423bd66",
            "arn": "arn:aws:ec2:eu-central-1:984140674362:elastic-ip/eipalloc-00794a171e423bd66",
            "association_id": "eipassoc-0f523dd53c8686a81",
            "domain": "vpc",
            "id": "eipalloc-00794a171e423bd66",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-06a562aabb129ac55",
            "private_dns": "ip-10-0-1-140.eu-central-1.compute.internal",
            "private_ip": "10.0.1.140",
            "public_dns": "ec2-63-186-206-91.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.186.206.91",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "eipalloc-00794a171e423bd66",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04bc554a9635a77c8",
            "arn": "arn:aws:ec2:eu-central-1:984140674362:instance/i-024a9de430641d53e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024a9de430641d53e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051f2455ee93f83ff"
              }
            ],
            "primary_network_interface_id": "eni-051f2455ee93f83ff",
            "private_dns": "ip-10-0-1-127.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.127",
            "public_dns": "ec2-18-159-45-228.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.45.228",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d780cf6d402d938f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027c9a56b8bcf966e",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06de5c7779a6d16c3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "i-024a9de430641d53e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_key_pair.deployer_key",
            "aws_security_group.jenkins_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.jenkins_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984140674362:internet-gateway/igw-05f06d377b2882031",
            "id": "igw-05f06d377b2882031",
            "owner_id": "984140674362",
            "region": "eu-central-1",
            "tags": {
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-0a68fe228a9f6cee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "igw-05f06d377b2882031",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00794a171e423bd66",
            "association_id": "eipassoc-0f523dd53c8686a81",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e30aea3564201bff",
            "network_interface_id": "eni-06a562aabb129ac55",
            "private_ip": "10.0.1.140",
            "public_ip": "63.186.206.91",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027c9a56b8bcf966e",
            "tags": {
              "Name": "jenkins-nat-gw"
            },
            "tags_all": {
              "Name": "jenkins-nat-gw"
            },
            "vpc_id": "vpc-0a68fe228a9f6cee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "nat-0e30aea3564201bff",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984140674362:route-table/rtb-02ea1bc54150d75d4",
            "id": "rtb-02ea1bc54150d75d4",
            "owner_id": "984140674362",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e30aea3564201bff",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-private-rt"
            },
            "tags_all": {
              "Name": "jenkins-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a68fe228a9f6cee4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "rtb-02ea1bc54150d75d4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984140674362:route-table/rtb-05c9f703660c7314d",
            "id": "rtb-05c9f703660c7314d",
            "owner_id": "984140674362",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f06d377b2882031",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f06d377b2882031",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-public-rt"
            },
            "tags_all": {
              "Name": "jenkins-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a68fe228a9f6cee4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "rtb-05c9f703660c7314d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e70516a6c77bb6e",
            "region": "eu-central-1",
            "route_table_id": "rtb-02ea1bc54150d75d4",
            "subnet_id": "subnet-04f439e730283a7e4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "rtbassoc-00e70516a6c77bb6e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bb7373494c4d05b",
            "region": "eu-central-1",
            "route_table_id": "rtb-05c9f703660c7314d",
            "subnet_id": "subnet-027c9a56b8bcf966e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "rtbassoc-03bb7373494c4d05b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984140674362:security-group/sg-06de5c7779a6d16c3",
            "description": "Allow SSH and HTTP/HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06de5c7779a6d16c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access (Nginx Proxy)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Jenkins master-worker communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "jenkins-security-group",
            "name_prefix": "",
            "owner_id": "984140674362",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a68fe228a9f6cee4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "sg-06de5c7779a6d16c3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984140674362:subnet/subnet-04f439e730283a7e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f439e730283a7e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984140674362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "jenkins-private-subnet"
            },
            "tags_all": {
              "Name": "jenkins-private-subnet"
            },
            "vpc_id": "vpc-0a68fe228a9f6cee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "subnet-04f439e730283a7e4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984140674362:subnet/subnet-027c9a56b8bcf966e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027c9a56b8bcf966e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984140674362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "jenkins-public-subnet"
            },
            "tags_all": {
              "Name": "jenkins-public-subnet"
            },
            "vpc_id": "vpc-0a68fe228a9f6cee4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "subnet-027c9a56b8bcf966e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:984140674362:vpc/vpc-0a68fe228a9f6cee4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bab2eabcb165105e",
            "default_route_table_id": "rtb-0b2611f69d163957d",
            "default_security_group_id": "sg-06aff2a58356bd811",
            "dhcp_options_id": "dopt-016be0f32c72f634e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a68fe228a9f6cee4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2611f69d163957d",
            "owner_id": "984140674362",
            "region": "eu-central-1",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984140674362",
            "id": "vpc-0a68fe228a9f6cee4",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}